# watch-authenticator

./: .env.example  .gitignore  README.md  launch-app.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-watch-app.bat  start-tunnel.ps1  tsconfig.base.json
.claude/: launch.json
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: README.md  app.json  metro.config.js  package.json
apps/mobile/app/: _layout.tsx  catalog.tsx  index.tsx  verify.tsx
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: auth-gate.tsx  compliance-banner.tsx  globals.css  help-button.tsx  lang-toggle.tsx  layout.tsx  login-screen.tsx  logout-button.tsx  manifest.ts  metal-mode-banner.tsx  page.tsx  paid-gate.tsx  paywall-sheet.tsx  pro-toggle.tsx  site-footer.tsx  site-header.tsx  skip-link.tsx  start-scan-fab.tsx
apps/web/app/admin/: page.tsx
apps/web/app/authenticate/: page.tsx
apps/web/app/billing/: page.tsx
apps/web/lib/: billing-client.ts  brand-expenses.ts  compliance.ts  device-id.ts  gallery-cloud.ts  help-content.ts  i18n.tsx  market-overrides.ts  num.ts  paywall.ts  photo-store.ts  plans.ts  pro.tsx  supabase.ts  test-images.ts  timing-store.ts  use-plan.ts  use-session.ts
supabase/: README.md
supabase/migrations/: 0001_initial_schema.sql  0001_saas_subscriptions.sql  0002_api_dealers.sql  0002_seed_rolex.sql  0003_credits.sql  0003_gallery.sql  ALL_saas_combined.sql
(+39 files in other folders)
