[package]
name = "watch-authenticator-desktop"
version = "0.1.0"
description = "Watch Authenticator desktop app"
authors = ["Yuri"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "watch_authenticator_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-fs = "2.1"
tauri-plugin-dialog = "2.0"
notify = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
